--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Nest App</title>
-    <link rel="stylesheet" href="./main.css"></link>
-  </head>
-  <body>
-    <p>{{ message }}</p>
-  </body>
-</html>
+<h3>Hey there {{message}}!</h3>
